# devsanghani.me

./: .gitignore  404.html  CNAME  Dockerfile  compare_requirements.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  hello.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
assets/css/style/: colors.css  comments.css  frontpage.css  work-experience.css
blog/: index.html
blog/tags/: index.html
cookbook/: index.html
docs/: cookbook.md  index.md  luckperms.md  music.md  work-experience.md
docs/assets/css/: extra.css
docs/assets/css/style/: colors.css  frontpage.css  share.css  work-experience.css
docs/assets/stylesheets/: work-experience.css
docs/blog/: .authors.yml  index.md  tags.md
docs/blog/posts/: .00-00-template.md
docs/blog/posts/2025/: 02-13-ssh-setup-tutorial.md
docs/oneversionremake/: protocol_versions.json
luckperms/: index.html
music/: index.html
search/: search_index.json
theme/: 404.html  blog-post.html  frontpage.html  main.html  work-experience.html
theme/hooks/: experience.py  footnotes.py
theme/partials/: comments.html  copyright.html  share.html
work-experience/: index.html
